--- a/style.css
+++ b/style.css
@@ -216,6 +216,9 @@ html{
 }
 
 @media only screen and (min-width: 320px) and (max-width: 744px){
+.contenedor{
+    justify-content: center;
+}
 .logo{
     margin: 2.4rem 0 0 1.6rem;
 }
